release 1.0.3 (2009-03/04)
- Fixed issue 198
  https://jersey.dev.java.net/issues/show_bug.cgi?id=198
  UriBuilder.uri works correctly replacing scheme specific parts.
- Fixed issue 240
  https://jersey.dev.java.net/issues/show_bug.cgi?id=240
  Fixed issue with LW HTTP server container not using the correct host and
  port for the base and request URIs. It is necessary to use the host and
  port declared in the Host HTTP header.
- Support for IoC integration where by the IoC framework manages components
  and supports third-party injection onto components by listening on
  post construction of a component.
  See:
    com.sun.jersey.core.spi.component.ioc.{
        IoCFullyManagedComponentProvider,
        IoCComponentProcessorFactory,
        IoCComponentProcessorFactoryInitializer
    }
- Fixed issue where charset of the media type was not being used when
  unmarshalling a list of JAXB objects serialized as a JSON document.
- Fixed issue 233
  https://jersey.dev.java.net/issues/show_bug.cgi?id=233
  The Jersey JSON parser now correctly supports lowercase unicode escape
  sequences.
- Fixed issue 221
  https://jersey.dev.java.net/issues/show_bug.cgi?id=226
  When resolving an absolute template name to a fully qualified template name
  that has a template processor associated with it, then the class hiararchy is
  trasversed such that if the absolute template name cannot be resolved from
  a declared resolving class, then resolution is attempted with the super class
  etc. until the Object class is reached, which if so means that resolution
  failed. This means views work correctly with cglib proxied resource classes.
- Fixed issue 226
  https://jersey.dev.java.net/issues/show_bug.cgi?id=226
  Viewable instances with absolute template names may be set as the response
  entity no matching resource available. Thus filters and exception mappers
  can use the model/view/control mechanism.
  In addition it is possible to declare the resolving class explicitly on